welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:14: error: too many arguments for method poseBiscuit: ()Unit
poseBiscuit(1)
           ^Balin:18: error: too many arguments for method gauche: ()Unit
gauche(1)
      ^Balin:20: error: too many arguments for method gauche: ()Unit
gauche(1)
      ^